# libdipdip

./: CMakeLists.txt  README.md  meson.build
include/: copy.sh
src/: copy.sh  m_build_info.F90  m_libpaw_tools.F90  m_optim_dumper.F90  m_specialmsg.F90  meson.build
src/abinit/: copy.sh  m_cppopts_dumper.F90  m_numeric_tools.F90  m_paw_numeric.F90
src/main/: main.F90
src/multibinit/: Makefile.am  Makefile.in  abinit.dep  abinit.dir  abinit.srcc  get_module_file.py  m_fit_polynomial_coeff.F90  m_multibinit_dataset.F90
src/pyapi/: .testpython.F90.swp  Makefile  cmain  cmain.c  fmain  fmain.F90  fmod.F90  fmod.h  test.jl  test.py
testmeson/: fib  fib1.F90  fibby.pyx  main.F90  meson.build  setup.py
