sources=files(
           'm_fstrings.F90',
           'm_ewald.F90',
           'm_specialmsg.F90',
           'm_numeric_tools.F90',
           'm_linalg_interfaces.F90',
           'm_abicore.F90',
           'm_clib.F90',
           'm_xmpi.F90',
           'defs_basis.F90',
           'm_symtk.F90',
           'm_io_tools.F90',
           'm_build_info.F90',
           'm_hide_lapack.F90',
           'm_gtermcutoff.F90',
           'm_time.F90',
           'm_slk.F90',
           'm_splines.F90',
           'm_profiling_abi.F90',
           'm_errors.F90',
           )
